Don't use use fraction slash for nfs paths. This keeps the possibility to manually input the path and fixes

BUG: 184997

svn path=/trunk/KDE/kdebase/runtime/; revision=1205839